# PETRecon

./: CMakeLists.txt  PETRecon.cc
include/: FilteredBackProjection.hh  PETParameters.hh  SinogramConverter.hh
src/: FilteredBackProjection.cc  PETParameters.cc  SinogramConverter.cc
