CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)

PROJECT(PETRecon)

FIND_LIBRARY(FFTW_LIBRARY NAMES fftw3 fftw)
SET(FFTW_LIBRARIES "${FFTW_LIBRARY}")

FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/include)

FILE(GLOB sources ${PROJECT_SOURCE_DIR}/src/*.cc)
FILE(GLOB headers ${PROJECT_SOURCE_DIR}/include/*.hh)

ADD_EXECUTABLE(PETRecon PETRecon.cc ${sources} ${headers})
TARGET_LINK_LIBRARIES(PETRecon ${FFTW_LIBRARIES} ${VTK_LIBRARIES})

